--- a/Front-end/about.html
+++ b/Front-end/about.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#">Agent</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign In/Sign Up</a>
+              <a class="nav-link" href="sign_in_up.html">Sign In/Sign Up</a>
             </li>
           </ul>
         </div>
