--- a/Front-end/result.html
+++ b/Front-end/result.html
@@ -180,7 +180,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Team 06 SFSU SE Fall 2017</p>
       </div>
       <!-- /.container -->
     </footer>
