--- a/Front-end/sign_in_up.html
+++ b/Front-end/sign_in_up.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Welcome to Essos</title>
+    <title>Login - Essos</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
