UserHome.html added

--- a/Front-end/sign_in_up.html
+++ b/Front-end/sign_in_up.html
@@ -114,7 +114,14 @@
                   <input type="text" placeholder="Confirm Password" class="form-control">
                 </div>	
               </div>						
-              <button type="button" class="btn btn-lg btn-info">Submit</button>					
+              <button onclick="relocate_user_home()" type="button" class="btn btn-lg btn-info"> Submit</button>	
+               <script>
+                        function relocate_user_home()
+                        {
+                          location.href = "UserHome.html";
+                        } 
+                      </script>		
+
             </div>
           </form> 
         </div>
