--- a/Front-end/Registration.html
+++ b/Front-end/Registration.html
@@ -120,7 +120,7 @@
 
               <div class="row">
                 <div class="col-sm-6 form-group">            
-                  <button onclick="relocate_user_home()" type="button" class="btn btn-lg btn-info"> Submit</button> 
+                  <button onclick="relocate_user_home()" type="button" class="btn btn-lg btn-info"> Register</button> 
                   <script>
                     function relocate_user_home()
                       {
@@ -128,6 +128,9 @@
                       } 
                   </script>   
                 </div>
+                <li class="nav-item">
+                   <a class="nav-link" href="login.html"> or Sign In</a>
+                </li>
               </div>
 
             </div>
