--- a/Front-end/Agent/Bookmarks.html
+++ b/Front-end/Agent/Bookmarks.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Agent Dashboard</title>
+  <title>Bookmarks - Dashboard</title>
   <!-- Bootstrap core CSS-->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -21,7 +21,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Essos</a>
+    <a class="navbar-brand" href="../index.html">Essos</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,7 +30,7 @@
       <div class="input-group">
         <input type="text" class="form-control" style="width: 500px;">    
         <div class="input-group-btn">
-          <button type="button" class="btn btn-search btn-danger" onclick="relocate_home()">
+          <button type="button" class="btn btn-search btn-primary" onclick="relocate_home()">
               <span class="glyphicon glyphicon-search"></span>
               <span class="label-icon">Search</span>
           </button>             
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="index1.html">
+          <a class="nav-link" href="Agent.html">
             <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Agent Dashboard</span>
           </a>
@@ -58,13 +58,19 @@
             <span class="nav-link-text">Messages</span>
           </a>
         </li>
+        <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Messages">
+          <a class="nav-link" href="Bookmarks.html">
+            <i class="fa fa-fw fa-bookmark"></i>
+            <span class="nav-link-text">Bookmarks</span>
+          </a>
+        </li>
          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
           <a class="nav-link" href="MyPosts.html">
             <i class="fa fa-fw fa-list"></i>
             <span class="nav-link-text">My Posts</span>
           </a>
         </li>
-        <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Tables">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
           <a class="nav-link" href="NewPost.html">
             <i class="fa fa-fw fa-plus"></i>
             <span class="nav-link-text">New Post</span>
@@ -83,14 +89,13 @@
       <ul class="navbar-nav ml-auto">
 
         <li class="nav-item">
-              <a class="nav-link" href="about.html">About us</a>
+              <a class="nav-link" href="../about.html">About us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#">Agent</a>
         </li>
         <li class="nav-item">
-           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa fa-fw fa-sign-out"></i>Sign Out</a>
+           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">Sign Out</a>
         </li>
       </ul>
     </div>
@@ -100,101 +105,123 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="#">Dashboard</a>
+          <a href="Agent.html">Dashboard</a>
         </li>
-        <li class="breadcrumb-item active">New Post</li>
+        <li class="breadcrumb-item active">Bookmarks</li>
       </ol>
       <!-- Example DataTables Card-->
       <div class="card mb-3">
         <div class="card-header">
-          <i class="fa fa-plus-square-o"></i> Enter details to post a new property
-        </div>
+          <i class="fa fa-bookmark"></i> Saved Properties</div>
         <div class="card-body">
-        <!-- Page Content -->
-        <div class="container">
-          <form>
-            <div class="form-group">
-              <label for="inputAddress">Address line 1</label>
-              <input type="text" class="form-control" id="inputAddress1" placeholder="1234 Main St">
-            </div>
-            <div class="form-group">
-              <label for="inputAddress2">Address line 2</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity" placeholder="E.g. San Francisco">
-              </div>
-              <div class="form-group col-md-4">
-                <label for="inputState">State</label>
-                <input type="text" class="form-control" id="inputState" placeholder="E.g. California">
-              </div>
-              <div class="form-group col-md-2">
-                <label for="inputZip">Zip</label>
-                <input type="text" class="form-control" id="inputZip" placeholder="12345">
-              </div>
-            </div>
-            <br>
-            <div class="form-group">
-              <label for="Title">Title</label>
-              <input type="title" class="form-control" id="PropertyTitle" placeholder="E.g. Apartment in downtown San Francisco">
-            </div>
-            <div class="form-group">
-              <label for="Description"> Description </label>
-              <textarea class="form-control" id="PropertyDescription" rows="3" placeholder="Describe your property"></textarea>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-2">
-                <label for="Bedrooms">Bedrooms</label>
-                <select class="form-control" id="Bedrooms">
-                  <option>0</option>
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                  <option>6</option>
-                  <option>7+</option>
-                </select>
-              </div>
-              <div class="form-group col-md-2">
-                <label for="Bedrooms">Bathrooms</label>
-                <select class="form-control" id="Bathrooms">
-                  <option>1</option>
-                  <option>1.5</option>
-                  <option>2</option>
-                  <option>2.5</option>
-                  <option>3</option>
-                  <option>3.5</option>
-                  <option>4</option>
-                  <option>4.5</option>
-                  <option>5</option>
-                  <option>5+</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="FileUpload">Upload photos</label>
-              <input type="file" class="form-control-file" id="File1">
-              <input type="file" class="form-control-file" id="File2">
-              <input type="file" class="form-control-file" id="File3">
-              <input type="file" class="form-control-file" id="File4">
-              <input type="file" class="form-control-file" id="File5">
-            </div>
-            <div class="form-group">
-              <div class="form-check">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox"> I agree to Essos's terms and conditions
-                </label>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Post</button>            
-          </form>          
+            <!-- Page Content -->
+    <div class="container">
+
+      <!-- Project One -->
+      <div class="row">
+        <div class="col-md-7">
+          <a href="#">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          </a>
         </div>
+        <div class="col-md-5">
+          <h3>Property One
+            <small>(Location)</small>
+          </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
+        </div>
+      </div>
+      <!-- /.row -->
 
+      <hr>
 
-        <!-- /.container -->
+      <!-- Project Two -->
+      <div class="row">
+        <div class="col-md-7">
+          <a href="#">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          </a>
+        </div>
+        <div class="col-md-5">
+          <h3>Property Two
+            <small>(Location)</small>
+          </h3>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <hr>
+
+      <!-- Project Three -->
+      <div class="row">
+        <div class="col-md-7">
+          <a href="#">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          </a>
+        </div>
+        <div class="col-md-5">
+          <h3>Property Three
+            <small>(Location)</small>
+          </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <hr>
+
+      <!-- Project Four -->
+      <div class="row">
+
+        <div class="col-md-7">
+          <a href="#">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+          </a>
+        </div>
+        <div class="col-md-5">
+          <h3>Property Four
+            <small>(Location)</small>
+          </h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <hr>
+
+      <!-- Pagination -->
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">1</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+
+    </div>
+    <!-- /.container -->
         </div>
         <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
       </div>
@@ -225,11 +252,12 @@
           <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
+            <a class="btn btn-primary" href="../index.html">Logout</a>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
