--- a/Front-end/Agent/Messages.html
+++ b/Front-end/Agent/Messages.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Agent Dashboard</title>
+  <title>Messages - Dashboard</title>
   <!-- Bootstrap core CSS-->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -21,7 +21,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Essos</a>
+    <a class="navbar-brand" href="../index.html">Essos</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,7 +30,7 @@
       <div class="input-group">
         <input type="text" class="form-control" style="width: 500px;">    
         <div class="input-group-btn">
-          <button type="button" class="btn btn-search btn-danger" onclick="relocate_home()">
+          <button type="button" class="btn btn-search btn-primary" onclick="relocate_home()">
               <span class="glyphicon glyphicon-search"></span>
               <span class="label-icon">Search</span>
           </button>             
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="index1.html">
+          <a class="nav-link" href="Agent.html">
             <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Agent Dashboard</span>
           </a>
@@ -56,6 +56,12 @@
           <a class="nav-link" href="Messages.html">
             <i class="fa fa-fw fa-envelope"></i>
             <span class="nav-link-text">Messages</span>
+          </a>
+        </li>
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Messages">
+          <a class="nav-link" href="Bookmarks.html">
+            <i class="fa fa-fw fa-bookmark"></i>
+            <span class="nav-link-text">Bookmarks</span>
           </a>
         </li>
          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
@@ -83,14 +89,13 @@
       <ul class="navbar-nav ml-auto">
 
         <li class="nav-item">
-              <a class="nav-link" href="about.html">About us</a>
+              <a class="nav-link" href="../about.html">About us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#">Agent</a>
         </li>
         <li class="nav-item">
-           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa fa-fw fa-sign-out"></i>Sign Out</a>
+           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">Sign Out</a>
         </li>
       </ul>
     </div>
@@ -100,7 +105,7 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="#">Dashboard</a>
+          <a href="Agent.html">Dashboard</a>
         </li>
         <li class="breadcrumb-item active">Messages</li>
       </ol>
@@ -223,7 +228,7 @@
                   <td>NY</td>
                   <td>2010/06/09</td>
                 </tr>
-               
+
               </tbody>
             </table>
           </div>
@@ -257,7 +262,7 @@
           <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
+            <a class="btn btn-primary" href="../index.html">Logout</a>
           </div>
         </div>
       </div>
