--- a/Front-end/Agent/MyPosts.html
+++ b/Front-end/Agent/MyPosts.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Agent Dashboard</title>
+  <title>My Posts - Dashboard</title>
   <!-- Bootstrap core CSS-->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -21,7 +21,7 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">Essos</a>
+    <a class="navbar-brand" href="../index.html">Essos</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,7 +30,7 @@
       <div class="input-group">
         <input type="text" class="form-control" style="width: 500px;">    
         <div class="input-group-btn">
-          <button type="button" class="btn btn-search btn-danger" onclick="relocate_home()">
+          <button type="button" class="btn btn-search btn-primary" onclick="relocate_home()">
               <span class="glyphicon glyphicon-search"></span>
               <span class="label-icon">Search</span>
           </button>             
@@ -47,7 +47,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="index1.html">
+          <a class="nav-link" href="Agent.html">
             <i class="fa fa-fw fa-dashboard"></i>
             <span class="nav-link-text">Agent Dashboard</span>
           </a>
@@ -56,6 +56,12 @@
           <a class="nav-link" href="Messages.html">
             <i class="fa fa-fw fa-envelope"></i>
             <span class="nav-link-text">Messages</span>
+          </a>
+        </li>
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Messages">
+          <a class="nav-link" href="Bookmarks.html">
+            <i class="fa fa-fw fa-bookmark"></i>
+            <span class="nav-link-text">Bookmarks</span>
           </a>
         </li>
          <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Tables">
@@ -83,14 +89,13 @@
       <ul class="navbar-nav ml-auto">
 
         <li class="nav-item">
-              <a class="nav-link" href="about.html">About us</a>
+              <a class="nav-link" href="../about.html">About us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#">Agent</a>
         </li>
         <li class="nav-item">
-           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa fa-fw fa-sign-out"></i>Sign Out</a>
+           <a class="nav-link" data-toggle="modal" data-target="#exampleModal">Sign Out</a>
         </li>
       </ul>
     </div>
@@ -100,7 +105,7 @@
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="#">Dashboard</a>
+          <a href="Agent.html">Dashboard</a>
         </li>
         <li class="breadcrumb-item active">My Posts</li>
       </ol>
@@ -124,7 +129,7 @@
             <small>(Location)</small>
           </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-          <a class="btn btn-primary" href="#">View Property</a>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
         </div>
       </div>
       <!-- /.row -->
@@ -144,7 +149,7 @@
           </h3>
 
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-          <a class="btn btn-primary" href="#">View Property</a>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
         </div>
       </div>
       <!-- /.row -->
@@ -163,7 +168,7 @@
             <small>(Location)</small>
           </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          <a class="btn btn-primary" href="#">View Property</a>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
         </div>
       </div>
       <!-- /.row -->
@@ -183,7 +188,7 @@
             <small>(Location)</small>
           </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-primary" href="#">View Property</a>
+          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
         </div>
       </div>
       <!-- /.row -->
@@ -247,11 +252,31 @@
           <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
+            <a class="btn btn-primary" href="../index.html">Logout</a>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Logout Modal-->
+    <div class="modal fade" id="CongratulationsModal" tabindex="-1" role="dialog" aria-labelledby="CongratulationsModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Congratulations!</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">Your property has been submitted and will soon be listed on Essos.</div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Done</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
