--- a/Front-end/IndividualPost.html
+++ b/Front-end/IndividualPost.html
@@ -247,13 +247,13 @@
           <div class="modal-body">
             <div class="col form-group">
               <div class="modal-body "></div>
-              <input type="text" class="form-control" placeholder="Contact name">
+              <input type="text" class="form-control" placeholder="Enter your full name">
               </br>
-              <input type="text" class="form-control" placeholder="Email or phone number">
+              <input type="text" class="form-control" placeholder="Enter your email or phone number">
               </br>
               <div class="form-group">
 
-                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Type your message here" rows="5"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Type your message here..." rows="5"></textarea>
               </div>
             </div>
           </div>
