--- a/Front-end/Agent/MyPosts.html
+++ b/Front-end/Agent/MyPosts.html
@@ -46,22 +46,10 @@
 
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-          <a class="nav-link" href="Agent.html">
-            <i class="fa fa-fw fa-dashboard"></i>
-            <span class="nav-link-text">Agent Dashboard</span>
-          </a>
-        </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-          <a class="nav-link" href="Messages.html">
+          <a class="nav-link" href="Agent.html">
             <i class="fa fa-fw fa-envelope"></i>
             <span class="nav-link-text">Messages</span>
-          </a>
-        </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Messages">
-          <a class="nav-link" href="Bookmarks.html">
-            <i class="fa fa-fw fa-bookmark"></i>
-            <span class="nav-link-text">Bookmarks</span>
           </a>
         </li>
          <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Tables">
@@ -81,13 +69,12 @@
       <ul class="navbar-nav sidenav-toggler">
         <li class="nav-item">
           <a class="nav-link text-center" id="sidenavToggler">
-            <i class="fa fa-fw fa-angle-left"></i>
+            <i class="fa fa-fw fa-angle-left fa-2x"></i>
           </a>
         </li>
       </ul>
 
       <ul class="navbar-nav ml-auto">
-
         <li class="nav-item">
               <a class="nav-link" href="../about.html">About us</a>
         </li>
@@ -100,132 +87,131 @@
       </ul>
     </div>
   </nav>
+  <!-- .Navigation -->
+
   <div class="content-wrapper">
     <div class="container-fluid">
       <!-- Breadcrumbs-->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="Agent.html">Dashboard</a>
+          <a href="Agent.html">Agent Dashboard</a>
         </li>
         <li class="breadcrumb-item active">My Posts</li>
       </ol>
       <!-- Example DataTables Card-->
       <div class="card mb-3">
-        <div class="card-header">
-          <i class="fa fa-home"></i> Properties</div>
         <div class="card-body">
             <!-- Page Content -->
-    <div class="container">
+          <div class="container">
 
-      <!-- Project One -->
-      <div class="row">
-        <div class="col-md-7">
-          <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-          </a>
-        </div>
-        <div class="col-md-5">
-          <h3>Property One
-            <small>(Location)</small>
-          </h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
-        </div>
-      </div>
-      <!-- /.row -->
+            <!-- Project One -->
+            <div class="row">
+              <div class="col-md-7">
+                <a href="#">
+                  <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                </a>
+              </div>
+              <div class="col-md-5">
+                <h3>Property One
+                  <small>(Location)</small>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                <a class="btn btn-warning" href="../IndividualPost.html">View Property</a>
+              </div>
+            </div>
+            <!-- /.row -->
 
-      <hr>
+            <hr>
 
-      <!-- Project Two -->
-      <div class="row">
-        <div class="col-md-7">
-          <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-          </a>
-        </div>
-        <div class="col-md-5">
-          <h3>Property Two
-            <small>(Location)</small>
-          </h3>
+            <!-- Project Two -->
+            <div class="row">
+              <div class="col-md-7">
+                <a href="#">
+                  <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                </a>
+              </div>
+              <div class="col-md-5">
+                <h3>Property Two
+                  <small>(Location)</small>
+                </h3>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
-        </div>
-      </div>
-      <!-- /.row -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+                <a class="btn btn-warning" href="../IndividualPost.html">View Property</a>
+              </div>
+            </div>
+            <!-- /.row -->
 
-      <hr>
+            <hr>
 
-      <!-- Project Three -->
-      <div class="row">
-        <div class="col-md-7">
-          <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-          </a>
-        </div>
-        <div class="col-md-5">
-          <h3>Property Three
-            <small>(Location)</small>
-          </h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
-        </div>
-      </div>
-      <!-- /.row -->
+            <!-- Project Three -->
+            <div class="row">
+              <div class="col-md-7">
+                <a href="#">
+                  <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                </a>
+              </div>
+              <div class="col-md-5">
+                <h3>Property Three
+                  <small>(Location)</small>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+                <a class="btn btn-warning" href="../IndividualPost.html">View Property</a>
+              </div>
+            </div>
+            <!-- /.row -->
 
-      <hr>
+            <hr>
 
-      <!-- Project Four -->
-      <div class="row">
+            <!-- Project Four -->
+            <div class="row">
 
-        <div class="col-md-7">
-          <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-          </a>
-        </div>
-        <div class="col-md-5">
-          <h3>Property Four
-            <small>(Location)</small>
-          </h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-primary" href="../IndividualPost.html">View Property</a>
-        </div>
-      </div>
-      <!-- /.row -->
+              <div class="col-md-7">
+                <a href="#">
+                  <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                </a>
+              </div>
+              <div class="col-md-5">
+                <h3>Property Four
+                  <small>(Location)</small>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
+                <a class="btn btn-warning" href="../IndividualPost.html">View Property</a>
+              </div>
+            </div>
+            <!-- /.row -->
 
-      <hr>
+            <hr>
 
-      <!-- Pagination -->
-      <ul class="pagination justify-content-center">
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-            <span class="sr-only">Previous</span>
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-            <span class="sr-only">Next</span>
-          </a>
-        </li>
-      </ul>
+            <!-- Pagination -->
+            <ul class="pagination justify-content-center">
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">1</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">2</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+            </ul>
 
-    </div>
-    <!-- /.container -->
-        </div>
+          </div> <!-- /.container -->
+        </div>  <!-- .card body -->
         <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-      </div>
-    </div>
+      </div>  <!-- .card mb3 -->
+    </div>  <!-- .container fluid -->
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
     <footer class="py-5 bg-dark">
@@ -237,7 +223,7 @@
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fa fa-angle-up"></i>
+      <i class="fa fa-angle-up fa-2x"></i>
     </a>
     <!-- Logout Modal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -289,7 +275,7 @@
     <script src="js/sb-admin.min.js"></script>
     <!-- Custom scripts for this page-->
     <script src="js/sb-admin-datatables.min.js"></script>
-  </div>
+  </div> <!-- .content wrapper -->
 </body>
 
 </html>
