fixed logout modal bug in user pug file---- logout button now links to index.html

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -125,7 +125,7 @@
           <div class="modal-body">Are you sure you want to log out? Click "Logout" below to end your session.</div>
           <div class="modal-footer">
             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
+            <a class="btn btn-primary" href="index.html">Logout</a>
           </div>
         </div>
       </div>
