--- a/Front-end/Agent/Agent.html
+++ b/Front-end/Agent/Agent.html
@@ -19,6 +19,7 @@
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
+  
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <a class="navbar-brand" href="../index.html">Essos</a>
@@ -46,8 +47,9 @@
     <!-- .Search -->
 
 
-    <!-- Sidebar items -->
     <div class="collapse navbar-collapse" id="navbarResponsive">
+     
+      <!-- Sidebar items -->
       <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
         <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Tables">
           <a class="nav-link" href="Agent.html">
@@ -105,14 +107,14 @@
         </li>
         <li class="breadcrumb-item active">Messages</li>
       </ol>
-      <!-- Example DataTables Card-->
+      <!-- Messages DataTables Card-->
       <div class="card mb-3">
       
         <div class="card-body">
           <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-              <thead>
-                <tr>
+              <thead>   <!-- Messages table headings-->
+                <tr>            
                   <th>Name</th>
                   <th>Contact</th>
                   <th>Message</th>
